--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "0",
+  "name": "jetbooks",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "hbs": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongodb": "^3.5.5",
     "multer": "^1.4.2",
@@ -15,15 +19,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "@ifo_tim",
-  "license": "ISC",
-  "description": "jetbooks",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/timiwhosa/randomm.git"
+    "url": "git+https://github.com/timiwhosa/waddup.git"
   },
+  "keywords": [
+    "jetbooks"
+  ],
+  "author": "@ifo_tim",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/timiwhosa/randomm/issues"
+    "url": "https://github.com/timiwhosa/waddup/issues"
   },
-  "homepage": "https://github.com/timiwhosa/randomm#readme"
+  "homepage": "https://github.com/timiwhosa/waddup#readme"
 }
